...
            static let total = CommonAchievement.getTotalDone(for: _goal.done)
        }
        
        public enum Habits {
            static let testData = [run, drink, meditation]
            public static let run = Habit(id: "run",
                                   title: "Running at 7 am",
                                   notes: "Short run is better than no run",
                                   durationDays: 21,
                                   startDate: Checkpoints.startDate,
                                   schedule: [.monday, .tuesday, .wednesday, .thursday, .friday],
                                   color: HabitColor.habitBlue.color,
                                   isCurrentCompleted: true,
...
