...
    
    private lazy var addHabitButton: RoundedShadowButton = {
        let model = RoundedShadowButtonModel(shadowModel: .blueButton,
                                             radius: 32,
                                             backgroundColor: ColorName.uiBlue.color)
        let button = RoundedShadowButton(model: model, frame: .zero)
        button.accessibilityIdentifier = "Add habit button"
        button.setImage(Asset.add.image, for: .normal)
        
        return button
    }()
    
    override func viewDidLoad() {
...
